--- a/network/build.gradle
+++ b/network/build.gradle
@@ -35,19 +35,20 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.2.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.6.0'
-    implementation 'io.reactivex.rxjava2:rxjava:2.0.8'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
     implementation 'com.squareup.okhttp3:okhttp:3.5.0'
 
+    //implementation 'io.reactivex.rxjava2:rxjava:2.0.8'
+    //implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+
     //RxLifecycle
-    implementation 'com.trello.rxlifecycle2:rxlifecycle:2.2.1'
+    //implementation 'com.trello.rxlifecycle2:rxlifecycle:2.2.1'
     // If you want to bind to Android-specific lifecycles
-    implementation 'com.trello.rxlifecycle2:rxlifecycle-android:2.2.1'
+    //implementation 'com.trello.rxlifecycle2:rxlifecycle-android:2.2.1'
     // If you want pre-written Activities and Fragments you can subclass as providers
-    implementation 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.1'
+    //implementation 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.1'
 
     //fastjson
-    implementation 'com.alibaba:fastjson:1.1.70.android'
+    //implementation 'com.alibaba:fastjson:1.1.70.android'
     //implementation 'com.alibaba:fastjson:1.2.49'
 }
