--- a/network/build.gradle
+++ b/network/build.gradle
@@ -38,8 +38,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
     implementation 'com.squareup.okhttp3:okhttp:3.5.0'
 
-    //implementation 'io.reactivex.rxjava2:rxjava:2.0.8'
-    //implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.0.8'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
     //RxLifecycle
     //implementation 'com.trello.rxlifecycle2:rxlifecycle:2.2.1'
