--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,9 +27,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation project(':network')
 
-    implementation 'io.reactivex.rxjava2:rxjava:2.0.8'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
-
-    implementation 'com.squareup.okhttp3:okhttp:3.5.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.2.0'
+//    implementation 'io.reactivex.rxjava2:rxjava:2.0.8'
+//    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+//
+//    implementation 'com.squareup.okhttp3:okhttp:3.5.0'
+//    implementation 'com.squareup.retrofit2:retrofit:2.2.0'
 }
